@@ -23,11 +23,7 @@ gnome-at-mobility: gnome-at-commandline.in
 	cp $< $@
 
 desktopdir = $(datadir)/applications
-Desktop_in_files = \
-	default-applications.desktop.in \
-	default-applications-accessibility.desktop.in \
-	gnome-at-mobility.desktop.in \
-	gnome-at-visual.desktop.in
+Desktop_in_files = default-applications.desktop.in
 desktop_DATA = $(Desktop_in_files:.desktop.in=.desktop)
 
 autostartdir = $(datadir)/gnome/autostart
@@ -48,4 +44,3 @@ INCLUDES   = 					\
 
 CLEANFILES = $(GNOMECC_CAPPLETS_CLEANFILES) $(Desktop_in_files) $(desktop_DATA) $(xmldata_DATA) $(autostart_DATA)
 EXTRA_DIST = $(xmldata_in_files)
-
