@@ -11,10 +11,7 @@ capplets/background/gnome-wp-capplet.c
 capplets/background/gnome-wp-info.c
 capplets/background/gnome-wp-item.c
 capplets/default-applications/default-applications.desktop.in
-capplets/default-applications/default-applications-accessibility.desktop.in
-capplets/default-applications/gnome-at-mobility.desktop.in
 capplets/default-applications/gnome-at-session.desktop.in
-capplets/default-applications/gnome-at-visual.desktop.in
 capplets/display/display-properties.desktop.in
 capplets/file-types/file-types-capplet.c
 capplets/file-types/file-types-icon-entry.c
